# IR_Stereo

./: reproject_disparity.py
Calibration/: calibration.py  rectification.py  stereo-calibration.py
Calibration/rectification_maps/: maplx.npy  maply.npy  maprx.npy  mapry.npy
GANet/: evaluation.py  evaluation.sh  predict.py  predict.sh  train_cmu.sh
GANet/lists/: CMU.list
OCV_SGM/: KITTI_OCV.py  cmu_OCV.py  sgm_daimler.py
Pipelines/: Point_cloud.py  baseline.py  cmu_save.py  data.csv  nrew.py  present_result_1.py  save_inv.py  test.py  tmp.py  tnp.py
stereo_depth/: CMakeLists.txt  stereomatch.cpp
